--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jspsych": "^7.3.1"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-google": "^0.14.0",
     "jspsych-builder": "^4.4.0"
   },
   "browserslist": ">0.25%, not dead"
